add counter method for preprocessed files